--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <navibar id="navbar">
-    <a href="#"><img src="pics/logo.jpg" class="logo"></a>
+    <a href="#"><img src="docs/logo.jpg" class="logo"></a>
 
     <ul>
       <li><a href="">NEW DROP</a></li>
@@ -36,13 +36,13 @@
 
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="pics/1.jpg" class="w-50 p-3" alt="1slide"  height="540">
+                  <img src="docs/1.jpg" class="w-50 p-3" alt="1slide"  height="540">
                 </div>
                 <div class="carousel-item">
-                  <img src="pics/2.jpg" class="w-50 p-3" alt="2slide" height="540">
+                  <img src="docs/2.jpg" class="w-50 p-3" alt="2slide" height="540">
                 </div>
                 <div class="carousel-item">
-                  <img src="pics/3.jpg" class="w-50 p-3" alt="2slide" height="540">
+                  <img src="docs/3.jpg" class="w-50 p-3" alt="2slide" height="540">
                 </div>
               </div>
               <div class="txt">
@@ -67,13 +67,13 @@
   <div class="products cf">
     <div class="cp-1" id="btn1">
       <div class="image">
-        <img src="pics/6.jpg" alt="">
+        <img src="docs/6.jpg" alt="">
       </div>
 
       <div id="modal1" class="modal">
         <div class="modal1-content">
           <span class="close1">&times;</span>
-          <img src="pics/6.jpg" width="270px;">
+          <img src="docs/6.jpg" width="270px;">
           <p>PRICE: 18000 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -86,13 +86,13 @@
 
     <div class="cp-2"  id="btn2">
       <div class="image">
-        <img src="pics/7.jpg" alt="">
+        <img src="docs/7.jpg" alt="">
       </div>
 
       <div id="modal2" class="modal">
         <div class="modal2-content">
           <span class="close2">&times;</span>
-          <img src="pics/7.jpg" width="270px;">
+          <img src="docs/7.jpg" width="270px;">
           <p>PRICE: 14000 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -105,13 +105,13 @@
 
     <div class="cp-3"  id="btn3">
       <div class="image">
-        <img src="pics/8.jpg" alt="">
+        <img src="docs/8.jpg" alt="">
       </div>
 
       <div id="modal3" class="modal">
         <div class="modal3-content">
           <span class="close3">&times;</span>
-          <img src="pics/8.jpg" width="270px;">
+          <img src="docs/8.jpg" width="270px;">
           <p>PRICE: 5000 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -124,13 +124,13 @@
 
     <div class="cp-1"  id="btn4">
       <div class="image">
-        <img src="pics/10.jpg" alt="">
+        <img src="docs/10.jpg" alt="">
       </div>
 
       <div id="modal4" class="modal">
         <div class="modal4-content">
           <span class="close4">&times;</span>
-          <img src="pics/10.jpg" width="270px;">
+          <img src="docs/10.jpg" width="270px;">
           <p>PRICE: 9000 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -143,13 +143,13 @@
 
     <div class="cp-2"  id="btn5">
       <div class="image">
-        <img src="pics/11.jpg" alt="">
+        <img src="docs/11.jpg" alt="">
       </div>
 
       <div id="modal5" class="modal">
         <div class="modal5-content">
           <span class="close5">&times;</span>
-          <img src="pics/11.jpg" width="270px;">
+          <img src="docs/11.jpg" width="270px;">
           <p>PRICE: 7500 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -162,13 +162,13 @@
 
     <div class="cp-3"  id="btn6">
       <div class="image">
-        <img src="pics/9.jpg" alt="">
+        <img src="docs/9.jpg" alt="">
       </div>
 
       <div id="modal6" class="modal">
         <div class="modal6-content">
           <span class="close6">&times;</span>
-          <img src="pics/9.jpg" width="270px;">
+          <img src="docs/9.jpg" width="270px;">
           <p>PRICE: 22000 KZT <i class="fas fa-tag"></i></p>
           <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
         </div>
@@ -181,13 +181,13 @@
 
       <div class="cp-1" id="btn1">
         <div class="image">
-          <img src="pics/6.jpg" alt="">
+          <img src="docs/6.jpg" alt="">
         </div>
 
         <div id="modal1" class="modal">
           <div class="modal3-content">
             <span class="close1">&times;</span>
-            <img src="pics/6.jpg" width="270px;">
+            <img src="docs/6.jpg" width="270px;">
             <p>PRICE: 18000 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
@@ -200,13 +200,13 @@
 
       <div class="cp-2"  id="btn2">
         <div class="image">
-          <img src="pics/7.jpg" alt="">
+          <img src="docs/7.jpg" alt="">
         </div>
 
         <div id="modal2" class="modal">
           <div class="modal2-content">
             <span class="close2">&times;</span>
-            <img src="pics/7.jpg" width="270px;">
+            <img src="docs/7.jpg" width="270px;">
             <p>PRICE: 14000 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
@@ -219,13 +219,13 @@
 
       <div class="cp-3"  id="btn3">
         <div class="image">
-          <img src="pics/8.jpg" alt="">
+          <img src="docs/8.jpg" alt="">
         </div>
 
         <div id="modal3" class="modal">
           <div class="modal3-content">
             <span class="close3">&times;</span>
-            <img src="pics/8.jpg" width="270px;">
+            <img src="docs/8.jpg" width="270px;">
             <p>PRICE: 5000 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
@@ -238,13 +238,13 @@
 
       <div class="cp-1"  id="btn4">
         <div class="image">
-          <img src="pics/10.jpg" alt="">
+          <img src="docs/10.jpg" alt="">
         </div>
 
         <div id="modal4" class="modal">
           <div class="modal4-content">
             <span class="close4">&times;</span>
-            <img src="pics/10.jpg" width="270px;">
+            <img src="docs/10.jpg" width="270px;">
             <p>PRICE: 9000 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
@@ -257,13 +257,13 @@
 
       <div class="cp-2"  id="btn5">
         <div class="image">
-          <img src="pics/11.jpg" alt="">
+          <img src="docs/11.jpg" alt="">
         </div>
 
         <div id="modal5" class="modal">
           <div class="modal5-content">
             <span class="close5">&times;</span>
-            <img src="pics/11.jpg" width="270px;">
+            <img src="docs/11.jpg" width="270px;">
             <p>PRICE: 7500 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
@@ -276,13 +276,13 @@
 
       <div class="cp-3"  id="btn6">
         <div class="image">
-          <img src="pics/9.jpg" alt="">
+          <img src="docs/9.jpg" alt="">
         </div>
 
         <div id="modal6" class="modal">
           <div class="modal6-content">
             <span class="close6">&times;</span>
-            <img src="pics/9.jpg" width="270px;">
+            <img src="docs/9.jpg" width="270px;">
             <p>PRICE: 22000 KZT <i class="fas fa-tag"></i></p>
             <p> <i class="fas fa-tshirt"></i> SIZE: <b>S M L</b></p>
           </div>
