--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PROMOTION</title>
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="CSS/index.css">
   <script src="JS/slider.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="fontawesome\css\all.css" rel="stylesheet">
