--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <navibar id="navbar">
-    <a href="#"><img src="docs/logo.jpg" class="logo"></a>
+    <a href="#"><img src="/workspaces/QR/docs/logo.jpg" class="logo"></a>
 
     <ul>
       <li><a href="">NEW DROP</a></li>
